fixed footer links gap

--- a/public/footer.css
+++ b/public/footer.css
@@ -36,7 +36,7 @@ i {
         bottom: 0;
         height: 25vh;
     }
-    .footer-links ul {
-        gap: 2.5rem;
+    i {
+        margin-left: 2rem;
     }
 }
